[package]
name = "honeybeepf"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
honeybeepf-common = { path = "../honeybeepf-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
chrono = "0.4"
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive", "env"] }
config = "0.14"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
bytes = "1"

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
honeybeepf-ebpf = { path = "../honeybeepf-ebpf" }

[[bin]]
name = "honeybeepf"
path = "src/main.rs"
